--- a/rs-lang/src/App.css
+++ b/rs-lang/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  height: 100%;
   text-align: center;
 }
 
@@ -35,4 +36,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.textbook {
+  min-height: 100vh;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; */
 }
